--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "5.2.1",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.54.4",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
